--- a/python/agents/gemini-fullstack/pyproject.toml
+++ b/python/agents/gemini-fullstack/pyproject.toml
@@ -16,9 +16,17 @@ dependencies = [
 requires-python = ">=3.10,<3.13"
 
 [dependency-groups]
-dev = []
+dev = [
+    "pytest~=8.3.2",
+    "pytest-asyncio~=0.23.7",
+    "nest-asyncio>=1.6.0",
+]
 
 [project.optional-dependencies]
+
+jupyter = [
+    "jupyter~=1.0.0",
+]
 
 lint = [
     "ruff>=0.4.6",
@@ -82,11 +90,9 @@ asyncio_default_fixture_loop_scope = "function"
 
 [tool.hatch.build.targets.wheel]
 packages = ["app","frontend"]
-
-
+ 
 # This configuration file is used by goo.gle/agent-starter-pack to power remote templating.
 # It defines the template's properties, settings, and deployment options.
-
 [tool.agent-starter-pack]
 base_template = "adk_base"
 description = "A production-ready fullstack research agent that uses Gemini to strategize, research, and synthesize comprehensive reports with human-in-the-loop collaboration"
